fix: bugfix safari gap

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -453,7 +453,7 @@ transition: all 0.3s ease 0s;
 .settings {
 	flex: 1 1 auto;
 	display: flex;
-	gap:10px;
+	/* gap:10px; */
 	justify-content: flex-start;
 	align-items: center;
 }
@@ -461,6 +461,7 @@ transition: all 0.3s ease 0s;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-right: 15px;
 }
 .settings-button img {
 	cursor: pointer;
@@ -791,6 +792,7 @@ border: 1px solid var(--main-border);
 }
 
 .language {
+	margin-right: 15px;
 	font-size: 13px;
 	cursor: pointer;
 	font-weight: 700;
